# redboxCI

./: Cargo.toml  fleet.toml
core/: Cargo.toml
core/src/: app_engine.rs  build_orchestrator.rs  errors.rs  lib.rs  persistence.rs  pipeline.rs  project.rs  project_manager.rs  source_control.rs  store_manager.rs  workspace.rs  workspace_manager.rs
docs/: deployment.yaml  design-doc.md  interfaces.md  pipeline.yaml
pipelines/: Cargo.toml
pipelines/src/: lib.rs  pipeline_executor.rs  repo_pipeline.rs
src/: main.rs  pipeline.rs
utils/: Cargo.toml
utils/src/: logger.rs
