[package]
name = "rbx_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mockall = "0.11.1"


[dependencies]
uuid = { version = "1.1.2", features=["v4", "fast-rng", "macro-diagnostics"] }
log = "0.4.17"
rbx_utils = { path = "../utils" }