[package]
name = "pipelines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rbx_utils = { path = "../utils" }
serde = "1.0.139"
serde_json = "1.0.82"
serde_yaml = "0.8"
anyhow = "1.0.58"
thiserror = "1.0.31"